@@ -21,13 +21,13 @@ COPY . .
 RUN sh ./gradlew build
 
 # Set up a second stage, which will only keep the compiled application and not the build tools and source code
-FROM openjdk:17-jdk-slim
+FROM amazoncorretto:17-alpine
 
 # Set the working directory to '/app'
 WORKDIR /app
 
 # Copy the jar file from the first stage
-COPY --from=build /app/build/libs/*.jar app.jar
+ENV JAVA_OPTS="-Xms64m -Xmx450m -XX:+UseZGC -XX:MaxMetaspaceSize=128m -XX:CompressedClassSpaceSize=32m -XX:+HeapDumpOnOutOfMemoryError -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=35 -Xlog:gc*:file=gc.log:time,uptime,level,tags:filecount=5,filesize=10m -Xss512k"
 
 # Set the startup command to execute the jar
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
